--- a/ManyBodyGravitySimulator/ManyBodyGravitySimulator.vcxproj
+++ b/ManyBodyGravitySimulator/ManyBodyGravitySimulator.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="SimulatedBody.cpp" />
     <ClCompile Include="TwoOrderRK4Method.cpp" />
     <ClCompile Include="TwoVector.cpp" />
+    <ClCompile Include="VertexArrayBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Body.h" />
@@ -164,8 +165,10 @@
     <ClInclude Include="SimulatedBody.h" />
     <ClInclude Include="TwoOrderRK4Method.h" />
     <ClInclude Include="TwoVector.h" />
+    <ClInclude Include="VertexArrayBuffer.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="fragment.shader" />
     <None Include="vertex.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
