--- a/ManyBodyGravitySimulator/ManyBodyGravitySimulator.vcxproj.filters
+++ b/ManyBodyGravitySimulator/ManyBodyGravitySimulator.vcxproj.filters
@@ -76,7 +76,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="vertex.shader" />
-    <None Include="fragment.shader" />
+    <None Include="vertex.vert" />
+    <None Include="fragment.frag" />
   </ItemGroup>
 </Project>
