--- a/ManyBodyGravitySimulator/ManyBodyGravitySimulator.vcxproj
+++ b/ManyBodyGravitySimulator/ManyBodyGravitySimulator.vcxproj
@@ -117,6 +117,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\Users\Cal\Documents\Code\ManyBodyGravitySimulator\glfw-3.3.8.bin.WIN64\include;C:\Users\Cal\Documents\Code\ManyBodyGravitySimulator\glew-2.1.0\include;C:\Users\Cal\Documents\glm-0.9.9.8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -134,6 +135,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\Users\Cal\Documents\Code\ManyBodyGravitySimulator\glfw-3.3.8.bin.WIN64\include;C:\Users\Cal\Documents\Code\ManyBodyGravitySimulator\glew-2.1.0\include;C:\Users\Cal\Documents\glm-0.9.9.8;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
