Move tests into test folder. Don't compile tests all the time

--- a/NBodySimulator/makefile
+++ b/NBodySimulator/makefile
@@ -3,7 +3,8 @@ COMPILER_FLAG := -g -lstdc++ -std=c++20
 
 BUILD_DIR := build
 
-SRCS:=$(wildcard **/*.cpp)
+ALL_SRCS:=$(wildcard **/*.cpp)
+SRCS:= $(filter-out Tests/, $(ALL_SRCS))
 OBJS:=$(foreach src, $(SRCS), $(BUILD_DIR)/$(subst .cpp,.o,$(src)))
 
 .PHONY: all
@@ -16,5 +17,5 @@ clean:
 nbodysimapp: $(OBJS)
 	$(COMPILER) $(COMPILER_FLAG) $(OBJS) -o $(BUILD_DIR)/nbodysimapp
 
-$(BUILD_DIR)/%.o : %.cpp
+$(OBJS): $(BUILD_DIR)/%.o : %.cpp
 	$(COMPILER) $(COMPILER_FLAG) -c $< -o $@
