--- a/.gitignore
+++ b/.gitignore
@@ -483,3 +483,6 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,c++
+
+# CMake build directory
+build
