--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,9 @@
 				"ms-vscode.cmake-tools",
 				"golang.go",
 				"ms-azuretools.vscode-docker",
-				"ms-vscode.makefile-tools"
+				"ms-vscode.makefile-tools",
+				"foxundermoon.shell-format",
+				"timonwong.shellcheck"
 			]
 		}
 	}
