Made multi stage build for web service container

--- a/NBodyWebService/Makefile
+++ b/NBodyWebService/Makefile
@@ -1,17 +1,32 @@
-compile:
-	go build -o build/webservice
+build_dir = build
+binary_name = webservice
 
-build: compile
+binary_path = $(build_dir)/$(binary_name)
+
+# Build go source code to binary
+build:
+	go build -o $(binary_path)
+
+# Run web service binary
+start:
+	./$(binary_path)
+
+# Build web service container image
+build-service:
 	docker compose build
 
-up: 
+# Create web service container and start it
+create-service: 
 	docker compose up
 
-down:
+# Stop web service container if it's running and remove it
+destroy-service:
 	docker compose down
 
-start:
+# Start existing web service container
+start-service:
 	docker compose start
 
-stop:
+# Stop running web service container
+stop-service:
 	docker compose stop
