--- a/NBodyWebService/Dockerfile
+++ b/NBodyWebService/Dockerfile
@@ -1,4 +1,13 @@
+FROM golang:latest AS builder
+
+WORKDIR /api
+COPY . .
+RUN make build
+
 FROM golang:latest
-COPY build/ /api/
+
+WORKDIR /api
+COPY --from=builder /api/build/* .
 EXPOSE 6969
+
 ENTRYPOINT ["/api/webservice"]
