--- a/NBodyWebService/Dockerfile
+++ b/NBodyWebService/Dockerfile
@@ -1,13 +1,13 @@
 FROM golang:latest AS builder
 
-WORKDIR /api
+WORKDIR /app
 COPY . .
 RUN make build
 
 FROM golang:latest
 
-WORKDIR /api
-COPY --from=builder /api/build/* .
+WORKDIR /app
+COPY --from=builder /app/build/* .
 EXPOSE 6969
 
-ENTRYPOINT ["/api/webservice"]
+ENTRYPOINT ["/app/webservice"]
